--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     </string>
     <string name="server_client_id">936145210267-gg341qnqfipe3n1t3vpgtgjpqcfilm3m.apps.googleusercontent.com</string>
     <string name="server_client_id2">936145210267-2apv1728j8b3aammo52k1tjfincidauq.apps.googleusercontent.com</string>
+    <string name="title_activity_main2">Main2Activity</string>
 </resources>
