--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,11 +18,12 @@
     <string name="server_client_id2">936145210267-2apv1728j8b3aammo52k1tjfincidauq.apps.googleusercontent.com</string>
     <string name="title_activity_main2">Main2Activity</string>
 
-    <!-- Strings for navigation bar -->
-    <string-array name="navigation_titles">
-        <item>Kitchen List</item>
-        <item>Grocery List</item>
-    </string-array>
+    <string name="item_name">itemName</string>
+    <string name="item_id">itemID</string>
+    <string name="list_id">listID</string>
+
+    <string name="add_item_fail">Edit Item failed.</string>
+    <string name="add_item_success">Edit Item successful.</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
